details + pres aangevuld

--- a/Thesis/pixelgeb.tex
+++ b/Thesis/pixelgeb.tex
@@ -264,8 +264,7 @@ is de similariteit tussen $A_j$ en $B_m$ dus de laatste die we berekenen. Die si
 voegen we ook nog toe aan $S$. Tenslotte bepalen we de globale similarteit tussen $A$ en $B$ 
 door het gemiddelde van de waarden uit $S$ te berekenen. De waarde $M(A,B)$ van een 
 similariteitsmaat $M$ op basis van beeldonderdelen, die gebruik maakt van een 
-pixelgebaseerde maat $M'$, wordt dus als volgt bepaald uit de geordende lijsten van
-beeldonderdelen:
+pixelgebaseerde maat $M'$, wordt dus als volgt bepaald uit de geordende lijsten:
 \begin{multicols}{2}
 \begin{algorithmic}[1]
 %\STATE partitioneer $A$ en $B$ zodanig dat alle beeldonderdelen dezelfde resolutie hebben
