--- a/Thesis/similariteit.tex
+++ b/Thesis/similariteit.tex
@@ -227,7 +227,7 @@ ervan uiteraard geen kwaad. Door toch voldoende aandacht te schenken aan de reke
 we er zelfs voor zorgen dat similariteitsmaten waarvoor we zonder extra inspanning veel te lang zouden 
 moeten rekenen, toch nog bruikbaar zijn.
 
-Stel dat $A$ en $B$ twee (L-)vaagverzamelingen zijn in een zelfde universum $X$. Het kan dan voorkomen dat 
+Stel dat $A$ en $B$ twee vaagverzamelingen zijn in een zelfde universum $X$. Het kan dan voorkomen dat 
 $X'= supp\ A \cup supp\ B$ veel minder elementen bevat dan $X$. In dat geval kunnen we de rekentijd sterk
 reduceren door het bereik van de sommaties in de vaagsimilariteitsmaten te beperken tot $X'$. Doordat
 $A(x)=B(x)=0$ voor alle $x \in X \setminus X'$ geldt er dan immers zowel
